--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,6 @@
-@media (min-width: 562px) {
+@media (max-width: 562px) {
     .text-container .title {
-        font-size: 30px;
+        font-size: 20px;
         text-align: center;
     }
     .btn-container .btn {
