--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     --valentinesDay: #eb3f84;
 }
 .main-info {
-    position: relative;
+    position: flex;
     z-index: 1;
     margin: 100px;
 }
@@ -25,7 +25,6 @@
 }
 .btn-container {
     display: inline-block;
-    margin: 5rem;
     margin-left: 50%;
     transform: translateX(-50%);
 }
@@ -33,6 +32,7 @@
     position: flex;
     background: var(--valentinesDay);
     color: white;
+    margin: 5rem;
 }
 .btn-container .btn:hover {
     background: white;
@@ -41,7 +41,7 @@
     transition: 0.7s;
 }
 .img-container {
-    display: flex;
+    display: inline-block;
 }
 .img-container .img {
     height: 20%;
