--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,10 @@
 @media (max-width: 952px) {
+    .text-container {
+        display: block;
+        background: yellow;
+    }
     .text-container .title {
-        display: inline-block;
+        
         font-size: 20px;
         text-align: center;
     }
