--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,3 +1,8 @@
+@media (max-width: 570px) {
+    .main-info {
+        margin: 3em 2em 1em 2em;
+    }
+}
 @media (max-width: 952px) {
     .text-container {
         display: block;
