--- a/css/animation.css
+++ b/css/animation.css
@@ -2,6 +2,7 @@
   .animation {
     -webkit-animation: html 4s ease infinite;
             animation: html 4s ease infinite;
+    margin-top: -100px;
   }
   
   .heart {
