--- a/css/style.css
+++ b/css/style.css
@@ -36,12 +36,13 @@
     background: var(--valentinesDay);
     color: white;
     margin: 5rem;
+    transition: all 0.5s ease-out; 
+    box-shadow: 0 5px 7px 0px rgba(184, 184, 184, 0.5);
 }
 .btn-container .btn:hover {
     background: white;
     color: var(--valentinesDay);
-    border-color: var(--valentinesDay);
-    transition: 0.7s;
+    border-color: 4px solid var(--valentinesDay);
 }
 .img-container {
     display: inline-block;
